crates/swc_css_parser/tests/errors/rome/invalid/min-or-max/output.stderr
error: Expected Declaration value
 --> $DIR/tests/errors/rome/invalid/min-or-max/input.css:3:1
  |
3 | }
  | ^

